cluster/config/drone/drone-kubernetes-runner.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-kubernetes-runner
  labels:
    app.kubernetes.io/name: drone-kubernetes-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone-kubernetes-runner
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault.vault.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-role: "drone"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
      labels:
        app.kubernetes.io/name: drone-kubernetes-runner
    spec:
      serviceAccountName: drone
      containers:
      - name: drone-runner
        image: drone/drone-runner-kube:latest
        volumeMounts:
          - name: public-key
            mountPath: "/etc/ssl/certs/kube-cert.crt"
            subPath: kube-cert.crt
            readOnly: true
            name: public-key
        ports:
        - containerPort: 3000
      volumes:
      - name: "public-key"
        configMap:
          name: wildcard-kube-home-distribution
