cluster/config/drone/drone.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: drone
  annotations:
    app: drone-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: drone
  name: drone-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-server
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault.vault.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-role: "drone"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
      labels:
        app: drone-server
    spec:
      serviceAccountName: drone
      containers:
        - name: drone-server
          image: drone/drone:2
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/var/lib/drone"
              name: "drone-data"
            - name: public-key
              mountPath: "/etc/ssl/certs/kube-cert.crt"
              subPath: "kube-cert.crt"
              readOnly: true
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
      restartPolicy: Always
      volumes:
      - name: "public-key"
        configMap:
          name: wildcard-kube-home-distribution
      - name: "drone-data"
        persistentVolumeClaim:
          claimName: drone-server
      - name: "drone-db"
        persistentVolumeClaim:
          claimName: drone-server
---
apiVersion: v1
kind: Service
metadata:
  name: drone-server-ui
  # dont name the service drone-server because it can break variables assigned by drone itself
  namespace: drone
  labels:
    app: drone-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: drone-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-server-ui
  namespace: drone
  annotations:
    kubernetes.io/ingress.class: "nginx"
    hajimari.io/enable: "true"
    hajimari.io/icon: git
    hajimari.io/appName: DroneCI
    hajimari.io/group: Dev
  labels:
    app: drone-server
spec:
  tls:
  - hosts:
    - drone.kube.home
  rules:
  - host: drone.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drone-server-ui
            port:
              name: http
